fix buildTrajectory usage